--- a/contracts/examples/rmrk/Cargo.toml
+++ b/contracts/examples/rmrk/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rmrk_example"
+name = "rmrk"
 version = "0.1.0"
 authors = ["[your_name] <[your_email]>"]
 edition = "2021"
@@ -15,8 +15,10 @@ ink_storage = { version = "3", default-features = false }
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
 
+rmrk_extension = { path = "../../crates/rmrk", default-features = false }
+
 [lib]
-name = "rmrk_example"
+name = "rmrk"
 path = "lib.rs"
 crate-type = [
 	# Used for normal contract Wasm blobs.
@@ -32,5 +34,7 @@ std = [
 	"ink_primitives/std",
 	"scale/std",
 	"scale-info/std",
+	"rmrk_extension/std",
+	"ink_prelude/std",
 ]
 ink-as-dependency = []
